Fix missing padding in user-forms

--- a/profile/themes/openculturas_base/scss_config/base/form-details.scss
+++ b/profile/themes/openculturas_base/scss_config/base/form-details.scss
@@ -16,6 +16,8 @@ details {
   border: 0;
   border-top: 1px solid $color-divider-light;
   padding: 0;
+  margin-left: $grid-gutter; // form has no padding, see form.scss
+  margin-right: $grid-gutter;
   width: 100%; // Required by ff.
 
   // Reverting form-wrapper default.
